@@ -1,2 +1,2 @@
 excite foo
-1\s+-\s+\d+\s+of
+search results 1\s*-\s*\d+\s+of
