@@ -1,2 +1,2 @@
 javasun stream
-StreamFilter
+input stream
