@@ -1,2 +1,2 @@
 musicbrainz swans
-Michael Gira
+US art rock
