@@ -1,2 +1,2 @@
 yahoo swans
-\d+,\d+</strong> results for
+\d+\s*-\s*\d+\s+of\s+about
